# atcoder

./: .gitignore  .tool-versions  README.md  asakatsu.sh  problem_template.rs  run.sh  setup.sh
.github/workflows/: ci.yaml
contests/: Cargo.toml
contests/__playground__/: __index__.rs  hello-world.rs  hello_world.rs  indexmap.rs  lazy_static.rs  petgraph.rs  superslice.rs  text_io.rs
contests/abc026/: abc026_c.rs
contests/abc054/: abc054_a.rs
contests/abc073/: abc073_c.rs
contests/abc078/: abc078_a.rs
contests/abc086/: arc089_a.rs
contests/abc097/: abc097_a.rs
contests/abc104/: abc104_a.rs
contests/abc122/: abc122_a.rs
contests/abc135/: abc135_a.rs
contests/abc140/: abc140_b.rs
contests/abc142/: abc142_b.rs  abc142_c.rs
contests/abc147/: abc147_b.rs
contests/abc152/: abc152_a.rs  abc152_b.rs  abc152_c.rs
contests/abc155/: abc155_b.rs
contests/abc166/: abc166_d.rs
contests/abc168/: abc168_c.rs
contests/abc189/: abc189_c.rs
contests/abc199/: abc199_b.rs
contests/abc201/: abc201_a.rs
contests/abc203/: abc203_b.rs
contests/abc206/: abc206_a.rs
contests/abc223/: abc223_a.rs  abc223_b.rs  abc223_c.rs  abc223_c_another.rs
contests/abc224/: abc224_a.rs  abc224_b.rs
contests/abc226/: abc226_a.rs
contests/abc227/: abc227_a.rs
contests/abs/: abc081_a.rs  abc081_b.rs  abc086_a.rs
contests/agc009/: agc009_a.rs
contests/agc022/: agc022_a.rs
contests/agc028/: agc028_a.rs
contests/agc029/: agc029_a.rs
contests/agc037/: agc037_a.rs
contests/arc007/: arc007_2.rs
contests/arc008/: arc008_1.rs
contests/arc010/: arc010_2.rs
contests/arc032/: arc032_2.rs
contests/arc037/: arc037_a.rs
contests/arc044/: arc044_a.rs
contests/arc051/: arc051_a.rs
contests/arc069/: arc069_a.rs
contests/arc112/: arc112_b.rs
contests/arc114/: arc114_a.rs
contests/arc115/: arc115_a.rs
contests/arc128/: arc128_a.rs  arc128_a_another.rs
contests/code-festival-2014-quala/: code_festival_qualA_b.rs
contests/code-festival-2016-qualb/: codefestival_2016_qualB_a.rs
contests/diverta2019-2/: diverta2019_2_a.rs
contests/donuts-2015/: donuts_2015_1.rs
contests/nikkei2019-qual/: nikkei2019_qual_a.rs
contests/practice/: practice_1.rs
contests/tenka1-2014-qualb/: tenka1_2014_qualB_a.rs  tenka1_2014_qualB_a_Another.rs
contests/zone2021/: zone2021_b.rs  zone2021_b_another.rs
tools/: lib.ts  run.ts  setup.ts
