[package]
name = "atcoder"
version = "0.1.0"
authors = ["Futa HIRAKOBA <korosuke613613@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AtCoder 2019年言語アップデート以降に使用できるクレート

# 各クレートの説明
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"

# `num-traits`の自動実装
num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
ndarray = "=0.13.0"

# 線形代数
nalgebra = "=0.20.0"

# (線形)代数の抽象化
alga = "=0.9.3"

# libmのRust実装
libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"

# 乱数の分布の追加
rand_distr = "=0.2.2"

# グラフ
petgraph = "=0.5.0"

# 挿入順を保持するhash table
indexmap = "=1.3.2"

# 正規表現
regex = "=1.3.6"

# staticアイテムの遅延初期化
lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
ordered-float = "=1.0.2"

# ASCII文字列
ascii = "=1.0.0"

# permutation
permutohedron = "=0.2.4"

# スライスの拡張
superslice = "=1.0.0"

# イテレータの拡張
itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
maplit = "=1.0.2"

# 即席enum `Either<L, R>`
either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
im-rc = "=14.3.0"

# 可変長bit set
fixedbitset = "=0.2.0"

# 可変長bit set
bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
whiteread = "=0.5.0"

# 高速なハッシュ関数
rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
smallvec = "=1.2.0"

[[bin]]
name="practice_practice_1"
path = "practice/practice_1.rs"

[[bin]]
name="abs_practice_1"
path = "abs/practice_1.rs"

[[bin]]
name="abs_abc086_a"
path = "abs/abc086_a.rs"

[[bin]]
name="abs_abc081_a"
path = "abs/abc081_a.rs"

[[bin]]
name="abc142_abc142_b"
path = "abc142/abc142_b.rs"

[[bin]]
name="abc189_abc189_c"
path = "abc189/abc189_c.rs"

[[bin]]
name="abc152_abc152_a"
path = "abc152/abc152_a.rs"

[[bin]]
name="code-festival-2016-qualb_code-festival-2016-qualB_a"
path = "code-festival-2016-qualb/codefestival_2016_qualB_a.rs"

[[bin]]
name="arc114_arc114_a"
path = "arc114/arc114_a.rs"

[[bin]]
name="nikkei2019-qual_nikkei2019_qual_a"
path = "nikkei2019-qual/nikkei2019_qual_a.rs"

[[bin]]
name="donuts-2015_donuts_2015_1"
path = "donuts-2015/donuts_2015_1.rs"

[[bin]]
name="arc044_arc044_a"
path = "arc044/arc044_a.rs"

[[bin]]
name="abc122_abc122_a"
path = "abc122/abc122_a.rs"

[[bin]]
name="tenka1-2014-qualb_tenka1_2014_qualB_a"
path = "tenka1-2014-qualb/tenka1_2014_qualB_a.rs"

[[bin]]
name="tenka1-2014-qualb_tenka1_2014_qualB_a_Another"
path = "tenka1-2014-qualb/tenka1_2014_qualB_a_Another.rs"

[[bin]]
name="arc112_arc112_b"
path = "arc112/arc112_b.rs"

[[bin]]
name="__playground__"
path= "__playground__/__index__.rs"

[[bin]]
name="abc147_abc147_b"
path = "abc147/abc147_b.rs"

[[bin]]
name="arc037_arc037_a"
path = "arc037/arc037_a.rs"

[[bin]]
name="arc115_arc115_a"
path = "arc115/arc115_a.rs"

[[bin]]
name="abc078_abc078_a"
path = "abc078/abc078_a.rs"

[[bin]]
name="abc142_abc142_c"
path = "abc142/abc142_c.rs"

[[bin]]
name="abc166_abc166_d"
path = "abc166/abc166_d.rs"

[[bin]]
name="arc128_arc128_a"
path = "arc128/arc128_a.rs"

[[bin]]
name="arc128_arc128_a_another"
path = "arc128/arc128_a_another.rs"

[[bin]]
name="abc223_abc223_a"
path = "abc223/abc223_a.rs"

[[bin]]
name="abc223_abc223_b"
path = "abc223/abc223_b.rs"

[[bin]]
name="abc223_abc223_c"
path = "abc223/abc223_c.rs"

[[bin]]
name="abc223_abc223_c_another"
path = "abc223/abc223_c_another.rs"

[[bin]]
name="abc201_abc201_a"
path = "abc201/abc201_a.rs"

[[bin]]
name="abc086_arc089_a"
path = "abc086/arc089_a.rs"

[[bin]]
name="agc029_agc029_a"
path = "agc029/agc029_a.rs"

[[bin]]
name="abc152_abc152_b"
path = "abc152/abc152_b.rs"

[[bin]]
name="abc097_abc097_a"
path = "abc097/abc097_a.rs"

[[bin]]
name="arc051_arc051_a"
path = "arc051/arc051_a.rs"

[[bin]]
name="abc224_abc224_a"
path = "abc224/abc224_a.rs"

[[bin]]
name="abc224_abc224_b"
path = "abc224/abc224_b.rs"
